# tx-generator

./: .gitignore  README.md  case_gen.ipynb  main.ipynb  pyproject.toml  setup.sh
case/: __init__.py  case_loader.py  case_retriever.py  code_downloader.py  code_generator.py  code_loader.py  code_retriever.py  downloader.py
case_code/: __init__.py  code_downloader.py  code_transformer.py  downloader.py  loader.py  transformer.py
data/: case_outputs_claude-3-5-sonnet-20240620.jsonl  case_outputs_gpt-4o-mini.jsonl  case_outputs_gpt-4o.jsonl
model/: __init__.py  case.py  tx.py
utils/: model_selector.py  notebook_printer.py  printer.py
