[tool.poetry]
name = "tx-generator"
version = "0.1.0"
description = ""
authors = ["clement.l <maple3312936@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain = "^0.2.9"
langchain-chroma = "^0.1.2"
langchain-community = "^0.2.7"
langchain-anthropic = "^0.1.20"
langchain-openai = "^0.1.17"
langchain-google-vertexai = "^1.0.7"
langgraph = "^0.1.9"
pandas = "^2.2.2"
python = "^3.11"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
jq = "^1.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
